# rdkit-db

./: LICENSE  README.md  check_time.py  environment.yml  pyproject.toml  rdkit-db.yml
data/: chembl28_cleaned_06_07_2021_invalid_rdkit.smi  postgres_remres_part1.xlsx  postgres_remres_part1_pony.xlsx  postgres_remres_part2.xlsx  postgres_remres_part2_pony.xlsx  postgres_remres_part3.xlsx  postgres_remres_part3_pony.xlsx  test_mols.json  test_mols_part1.json  test_mols_part2.json  test_mols_part3.json
notebooks/: chembl.ipynb  create_indexes_chembl_db.ipynb  create_indexs_chembl_db.ipynb
src/: db.py  orm_classes.py  postgresql_db.py
