[tool.poetry]
name = "rdkit-db"
version = "0.1.0"
description = ""
authors = ["Aigul Khakimova"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
loguru = "^0.5.3"
pandas = "^1.2.5"
psycopg2 = "^2.9.1"
pony = "^0.7.14"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
